force-app/main/default/objects/Project_Task__c/Project_Task__c.object-meta.xml
<CustomObject>
  <label>Project Task</label>
  <pluralLabel>Project Tasks</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Project Task</label>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>