force-app/main/default/objects/Project_Task__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Report</label>
    <referenceTo>Daily_Report__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Daily_Report_Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>