force-app/main/default/objects/Project_Task__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <label>Project Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Phase_Project_Tasks</relationshipName>
    <type>MasterDetail</type>
</CustomField>